@@ -5,6 +5,10 @@
 
 2021-08-31 -> ## code stuff
 	      add signal handler thread to all application for catching SIG_TERM
+	      remove all code for lcd-ctrl handling
+
+	      ## sensor_pi stuff
+              fix debug output of bmp180 infos and cpu temp
 
 2021-07-31 -> ## lcd2004_i2c & poweroff stuff
 	      fix ctrl fifo handling
